# Prana

./: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  README.md  ccri_calculator.py  config.py  data_fetcher.py  ha_aqi_calculator.py  location_detector.py  ndt_calculator.py  prana_system.py  pyproject.toml  rds_calculator.py  requirements.txt
backend/: database.py  llm.py  logger.py  main.py
docs/framework/: README.md
framework/: __init__.py  errors.py
framework/agent/: base.py  react.py  result.py
framework/ai/: base.py  factory.py  fallback.py  gemini.py  mock.py  ollama.py  openrouter.py
framework/config/: settings.py
framework/context/: user.py
framework/messaging/: base.py  email.py  mock.py  registry.py  webhook.py  whatsapp.py
framework/persistence/: base.py  memory.py  sqlite.py
framework/tools/: base.py  permissions.py
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/test/: onboarding_screen_test.dart  widget_test.dart
prana/: ccri_calculator.py  config.py  personalization.py  prana_system.py  rds_calculator.py
prana/ai_tools/: checkin.py  risk.py
prana/bot/: bootstrap.py  whatsapp_webhook.py
research/: __init__.py
scripts/: deploy.sh  load_test.py  preflight_check.py  start_all.ps1  test_satellite_radiation.py
tests/: test_formulas.py  test_issue1_rds_bands.py  test_issue3_pm25_labeling.py  test_issue4_ozone_threshold.py  test_issue5_pollution_unavailable.py  test_issue6_recovery_multiplier.py  test_issue7_forecast_validation.py  test_personalization.py  test_satellite_radiation.py
(+53 files in other folders)
