[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prana"
version = "0.1.0"
description = "PRANA compound climate-risk formula engine and backend."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.3",
    "requests>=2.31.0",
    "httpx>=0.27",
    "geopy>=2.4.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
research = [
    "statsmodels>=0.14.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
]
dev = ["pytest>=7.4.0", "respx>=0.20", "import-linter>=2"]

[tool.setuptools]
packages = ["prana", "backend", "framework"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
